<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ncr_green_color"
    tools:context="${packageName}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/main_view_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/custom_title_bar_color"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ncr_header" />

        <Button
            android:id="@+id/header_right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/reload"
            android:onClick="onRefresh"
            android:visibility="gone" />

        <Button
            android:id="@+id/header_left"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/list_of_reciepts"
            android:onClick="onListOfReciept"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_activity_login_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/login_activity_login_body_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/login_activity_login_body_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/login_activity_login_body_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="onLogin"
            android:paddingTop="5dp"
            android:text="@string/login"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/or"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/login_activity_login_body_show_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="onShowSignUp"
            android:paddingTop="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_activity_signup_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/login_activity_signup_body_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/login_activity_signup_body_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/login_activity_signup_body_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="onSignUp"
            android:paddingTop="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/or"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/login_activity_signup_body_show_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:onClick="onShowLogin"
            android:paddingTop="5dp"
            android:text="@string/login"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_progres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>